Fix drag & drop file upload's underlying input being visible.

--- a/src/scss/components/_file-upload.scss
+++ b/src/scss/components/_file-upload.scss
@@ -22,6 +22,7 @@
     top: 0;
     left: 0;
     cursor: pointer;
+    opacity: 0;
   }
   &__icons {
     @include spacing.fs-responsive-margin(3, $direction: bottom);
